@@ -13,8 +13,9 @@ module WEBrick
   module HTTPStatus
 
     class Status      < StandardError
-      def initialize(message=self.class, *rest)
-        super(AccessLog.escape(message), *rest)
+      def initialize(*args)
+        args[0] = AccessLog.escape(args[0]) unless args.empty?
+        super(*args)
       end
       class << self
         attr_reader :code, :reason_phrase
