@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2010-06-10"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20100610
-#define RUBY_PATCHLEVEL 292
+#define RUBY_PATCHLEVEL 293
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
