@@ -1,3 +1,8 @@
+Thu Jun 10 14:22:09 2010  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* lib/webrick/httpstatus.rb (WEBrick::HTTPStatus::Status::initialize):
+	  accept 0 or more arguments. [ruby-core:28692]
+
 Thu Jun 10 13:37:35 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* eval.c (rb_load): initialize orig_func.   [ruby-core:27296]
